--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "clipboard": "^2.0.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-promise-tracker": "^2.1.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
