--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "clipboard": "^2.0.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-confetti-explosion": "^1.5.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
